0205改动首页文案和产品生态背景3d，多语言适配

--- a/pages/brochure.html
+++ b/pages/brochure.html
@@ -212,8 +212,8 @@
         </div>
     </footer>
 
-    <script src="../js/languages.js"></script>
-    <script src="../script.js"></script>
+    <script src="../js/languages.js?v=20250206"></script>
+    <script src="../script.js?v=20250206"></script>
     <script>
         // 加载PDF内容摘要
         fetch('../pdf_content.txt')
