--- a/pages/developer.html
+++ b/pages/developer.html
@@ -391,8 +391,8 @@ resources = client.list_resources()</pre>
         </div>
     </div>
 
-    <script src="../js/languages.js"></script>
-    <script src="../script.js"></script>
+    <script src="../js/languages.js?v=20250206"></script>
+    <script src="../script.js?v=20250206"></script>
     <script>
         // 显示Coming Soon弹框
         function showComingSoonModal() {
