--- a/pages/infra.html
+++ b/pages/infra.html
@@ -652,8 +652,8 @@
         </div>
     </footer>
 
-    <script src="../js/languages.js"></script>
-    <script src="../script.js"></script>
+    <script src="../js/languages.js?v=20250206"></script>
+    <script src="../script.js?v=20250206"></script>
     <script>
         // 鼠标跟随光效
         document.addEventListener('mousemove', function(e) {
