--- a/pages/token.html
+++ b/pages/token.html
@@ -434,7 +434,7 @@
         <section class="token-content">
             <div class="token-overview">
                 <div class="token-symbol">🪙</div>
-                <div class="token-name" data-i18n="token.name">PEC Token</div>
+                <div class="token-name" data-i18n="token.name">PEC 代币</div>
                 <p style="color: var(--text-secondary);" data-i18n="token.intro">PowerVerse Token是PowerVerse Chain生态系统的原生代币</p>
                 <div class="token-stats">
                     <div class="token-stat">
@@ -582,8 +582,8 @@
         </div>
     </footer>
 
-    <script src="../js/languages.js"></script>
-    <script src="../script.js"></script>
+    <script src="../js/languages.js?v=20250206"></script>
+    <script src="../script.js?v=20250206"></script>
     <script>
         // 复制功能
         function setupCopyButtons() {
