--- a/pages/cloudgaming.html
+++ b/pages/cloudgaming.html
@@ -729,8 +729,8 @@
         </div>
     </footer>
 
-    <script src="../js/languages.js"></script>
-    <script src="../script.js"></script>
+    <script src="../js/languages.js?v=20250206"></script>
+    <script src="../script.js?v=20250206"></script>
     
     <!-- 游戏图片点击跳转功能 -->
     <script>
