--- a/pages/hardware-factory.html
+++ b/pages/hardware-factory.html
@@ -517,7 +517,7 @@
         </div>
     </footer>
 
-    <script src="../js/languages.js"></script>
-    <script src="../script.js"></script>
+    <script src="../js/languages.js?v=20250206"></script>
+    <script src="../script.js?v=20250206"></script>
 </body>
 </html>
