--- a/pages/scenarios.html
+++ b/pages/scenarios.html
@@ -1357,8 +1357,8 @@
         </div>
     </footer>
 
-    <script src="../js/languages.js"></script>
-    <script src="../script.js"></script>
+    <script src="../js/languages.js?v=20250206"></script>
+    <script src="../script.js?v=20250206"></script>
 </body>
 
 </html>
