--- a/pages/scan.html
+++ b/pages/scan.html
@@ -13,7 +13,7 @@
             padding: 140px 0 80px;
             text-align: center;
             background: linear-gradient(135deg, rgba(0, 212, 255, 0.1) 0%, rgba(0, 102, 255, 0.1) 100%);
-            background-image: url('https://trae-api-cn.mchost.guru/api/ide/v1/text_to_image?prompt=blockchain%20explorer%20with%20transaction%20data%20and%20block%20visualization%2C%20futuristic%20blockchain%20scan%20interface%2C%20blue%20and%20green%20hue%2C%203D%20rendering%2C%20high%20quality%2C%20tech%20background&image_size=landscape_16_9');
+            background-image: url('../images/backgrounds/powerverse infra 4.svg');
             background-size: cover;
             background-position: center;
             background-repeat: no-repeat;
@@ -23,18 +23,25 @@
         .page-header::before {
             content: '';
             position: absolute;
-            top: 0;
-            left: 0;
-            right: 0;
-            bottom: 0;
+            top: 0; left: 0; right: 0; bottom: 0;
             background: radial-gradient(circle at 50% 50%, rgba(0, 0, 0, 0.3) 0%, rgba(0, 0, 0, 0.8) 70%);
             pointer-events: none;
+        }
+        .page-header::after {
+            content: '';
+            position: absolute;
+            top: 0; left: 0; right: 0; bottom: 0;
+            background: radial-gradient(circle at var(--mouse-x, 50%) var(--mouse-y, 50%),
+                rgba(0, 212, 255, 0.15) 0%, rgba(0, 102, 255, 0.05) 20%, transparent 60%);
+            pointer-events: none;
+            transition: all 0.5s ease;
         }
         .product-hero {
             position: relative;
             z-index: 1;
             max-width: 900px;
             margin: 0 auto;
+            animation: fadeInUp 1s ease-out;
         }
         .product-icon {
             font-size: 6rem;
@@ -43,35 +50,43 @@
             animation: float 3s ease-in-out infinite;
         }
         @keyframes float {
-            0%, 100% { transform: translateY(0px); }
+            0%, 100% { transform: translateY(0); }
             50% { transform: translateY(-10px); }
+        }
+        @keyframes fadeInUp {
+            from { opacity: 0; transform: translateY(30px); }
+            to { opacity: 1; transform: translateY(0); }
         }
         .product-hero h1 {
             font-size: 3.5rem;
             margin-bottom: 1rem;
             font-weight: 700;
-            color: #ffffff;
-            text-shadow: 0 2px 4px rgba(0, 0, 0, 0.5);
+            color: #fff;
+            text-shadow: 0 2px 4px rgba(0,0,0,0.5);
+            animation: fadeInUp 1.2s ease-out;
         }
         .product-hero .subtitle {
-            font-size: 1.5rem;
+            font-size: 1.25rem;
             color: #f0f0f0;
-            margin-bottom: 2rem;
-            text-shadow: 0 1px 2px rgba(0, 0, 0, 0.5);
-            font-weight: 500;
+            margin-bottom: 1rem;
+            text-shadow: 0 1px 2px rgba(0,0,0,0.5);
+            animation: fadeInUp 1.4s ease-out;
         }
         .product-hero p {
-            color: var(--text-secondary);
             font-size: 1.125rem;
+            color: #f0f0f0;
             line-height: 1.8;
             margin: 0 auto;
+            text-shadow: 0 1px 2px rgba(0,0,0,0.5);
+            animation: fadeInUp 1.6s ease-out;
         }
         .product-content {
             padding: 5rem 0;
+            max-width: 960px;
+            margin: 0 auto;
+            text-align: center;
         }
-        .section {
-            margin-bottom: 5rem;
-        }
+        .section { margin-bottom: 5rem; }
         .section-title {
             font-size: 2.5rem;
             color: var(--primary-color);
@@ -79,9 +94,11 @@
             font-weight: 700;
             display: flex;
             align-items: center;
+            justify-content: center;
             gap: 1rem;
             padding-bottom: 1rem;
             border-bottom: 2px solid var(--border-color);
+            animation: fadeInUp 1s ease-out;
         }
         .section-title::before {
             content: '';
@@ -91,16 +108,20 @@
             border-radius: 3px;
         }
         .feature-grid {
-            display: grid;
-            grid-template-columns: repeat(auto-fit, minmax(300px, 1fr));
-            gap: 2rem;
+            display: flex;
+            flex-direction: column;
+            gap: 1.5rem;
             margin-top: 2rem;
+            text-align: left;
         }
         .feature-card {
+            display: flex;
+            align-items: flex-start;
+            gap: 2rem;
             background: var(--card-bg);
             border: 1px solid var(--border-color);
             border-radius: 16px;
-            padding: 2.5rem;
+            padding: 1.5rem 2rem;
             transition: all 0.3s ease;
         }
         .feature-card:hover {
@@ -108,21 +129,45 @@
             box-shadow: 0 10px 30px rgba(0, 212, 255, 0.2);
             transform: translateY(-5px);
         }
+        .feature-card .card-icon {
+            flex-shrink: 0;
+            width: 72px;
+            height: 72px;
+            display: flex;
+            align-items: center;
+            justify-content: center;
+            background: linear-gradient(135deg, rgba(0, 212, 255, 0.15) 0%, rgba(0, 102, 255, 0.15) 100%);
+            border-radius: 12px;
+            border: 1px solid var(--border-color);
+            font-size: 2.5rem;
+        }
+        .feature-card .card-body { flex: 1; min-width: 0; }
         .feature-card h3 {
-            font-size: 1.5rem;
+            font-size: 1.35rem;
             color: var(--primary-color);
-            margin-bottom: 1rem;
+            margin-bottom: 0.5rem;
             font-weight: 600;
         }
-        .feature-card p {
+        .feature-card .card-body p {
             color: var(--text-secondary);
-            line-height: 1.8;
+            line-height: 1.7;
             margin: 0;
+            font-size: 0.95rem;
+        }
+        .scroll-animate {
+            opacity: 0;
+            transform: translateY(30px);
+            transition: all 0.8s ease;
+        }
+        .scroll-animate.visible {
+            opacity: 1;
+            transform: translateY(0);
         }
         @media (max-width: 768px) {
-            .feature-grid {
-                grid-template-columns: 1fr;
-            }
+            .product-hero h1 { font-size: 2.5rem; }
+            .section-title { font-size: 2rem; }
+            .feature-card { flex-direction: column; align-items: flex-start; gap: 1rem; }
+            .feature-card .card-icon { width: 56px; height: 56px; font-size: 2rem; }
         }
     </style>
 </head>
@@ -197,50 +242,70 @@
 
     <div class="container">
         <section class="product-content">
-            <div class="section">
-                <h2 class="section-title" data-i18n="products.scan.section1.title">一、核心功能</h2>
-                
+            <div class="section scroll-animate">
+                <h2 class="section-title" data-i18n="products.scan.section1.title">核心功能</h2>
                 <div class="feature-grid">
                     <div class="feature-card">
-                        <h3 data-i18n="products.scan.section1.feature1.title">1. 区块查询</h3>
-                        <p data-i18n="products.scan.section1.feature1.desc">实时查看最新区块信息，包括区块高度、时间戳、交易数量、Gas 使用等详细数据。</p>
+                        <div class="card-icon">📦</div>
+                        <div class="card-body">
+                            <h3 data-i18n="products.scan.section1.feature1.title">区块查询</h3>
+                            <p data-i18n="products.scan.section1.feature1.desc">实时查看最新区块信息，包括区块高度、时间戳、交易数量、Gas 使用等详细数据。</p>
+                        </div>
                     </div>
-
                     <div class="feature-card">
-                        <h3 data-i18n="products.scan.section1.feature2.title">2. 交易追踪</h3>
-                        <p data-i18n="products.scan.section1.feature2.desc">通过交易哈希快速查询交易详情，包括发送方、接收方、金额、Gas 费用、交易状态等。</p>
+                        <div class="card-icon">🔀</div>
+                        <div class="card-body">
+                            <h3 data-i18n="products.scan.section1.feature2.title">交易追踪</h3>
+                            <p data-i18n="products.scan.section1.feature2.desc">通过交易哈希快速查询交易详情，包括发送方、接收方、金额、Gas 费用、交易状态等。</p>
+                        </div>
                     </div>
-
                     <div class="feature-card">
-                        <h3 data-i18n="products.scan.section1.feature3.title">3. 地址分析</h3>
-                        <p data-i18n="products.scan.section1.feature3.desc">查看任意地址的余额、交易历史、代币持有情况、合约交互记录等，全面了解地址活动。</p>
+                        <div class="card-icon">📍</div>
+                        <div class="card-body">
+                            <h3 data-i18n="products.scan.section1.feature3.title">地址分析</h3>
+                            <p data-i18n="products.scan.section1.feature3.desc">查看任意地址的余额、交易历史、代币持有情况、合约交互记录等，全面了解地址活动。</p>
+                        </div>
                     </div>
-
                     <div class="feature-card">
-                        <h3 data-i18n="products.scan.section1.feature4.title">4. 智能合约查询</h3>
-                        <p data-i18n="products.scan.section1.feature4.desc">查看智能合约的代码、ABI、调用记录、事件日志等，便于开发者调试和用户验证。</p>
+                        <div class="card-icon">📜</div>
+                        <div class="card-body">
+                            <h3 data-i18n="products.scan.section1.feature4.title">智能合约查询</h3>
+                            <p data-i18n="products.scan.section1.feature4.desc">查看智能合约的代码、ABI、调用记录、事件日志等，便于开发者调试和用户验证。</p>
+                        </div>
                     </div>
                 </div>
             </div>
 
-            <div class="section">
-                <h2 class="section-title" data-i18n="products.scan.features.title">Core Features</h2>
+            <div class="section scroll-animate">
+                <h2 class="section-title" data-i18n="products.scan.features.title">核心特性</h2>
                 <div class="feature-grid">
                     <div class="feature-card">
-                        <h3 data-i18n="products.scan.features.item1">Real-Time Data</h3>
-                        <p data-i18n="products.scan.features.item1Desc">Real-time synchronization of on-chain data ensuring accuracy and timeliness</p>
+                        <div class="card-icon">⏱️</div>
+                        <div class="card-body">
+                            <h3 data-i18n="products.scan.features.item1">实时数据</h3>
+                            <p data-i18n="products.scan.features.item1Desc">实时同步链上数据，确保信息的准确性和时效性</p>
+                        </div>
                     </div>
                     <div class="feature-card">
-                        <h3 data-i18n="products.scan.features.item2">Transaction Tracking</h3>
-                        <p data-i18n="products.scan.features.item2Desc">Complete transaction history with multi-dimensional queries and filtering</p>
+                        <div class="card-icon">🔀</div>
+                        <div class="card-body">
+                            <h3 data-i18n="products.scan.features.item2">交易追踪</h3>
+                            <p data-i18n="products.scan.features.item2Desc">完整的交易历史记录，支持多维度查询和筛选</p>
+                        </div>
                     </div>
                     <div class="feature-card">
-                        <h3 data-i18n="products.scan.features.item3">Address Analysis</h3>
-                        <p data-i18n="products.scan.features.item3Desc">In-depth address activity analysis with visualized data presentation</p>
+                        <div class="card-icon">📍</div>
+                        <div class="card-body">
+                            <h3 data-i18n="products.scan.features.item3">地址分析</h3>
+                            <p data-i18n="products.scan.features.item3Desc">深度分析地址活动，提供可视化数据展示</p>
+                        </div>
                     </div>
                     <div class="feature-card">
-                        <h3 data-i18n="products.scan.features.item4">Contract Query</h3>
-                        <p data-i18n="products.scan.features.item4Desc">Complete smart contract information supporting code verification and call analysis</p>
+                        <div class="card-icon">📜</div>
+                        <div class="card-body">
+                            <h3 data-i18n="products.scan.features.item4">合约查询</h3>
+                            <p data-i18n="products.scan.features.item4Desc">完整的智能合约信息，支持代码验证和调用分析</p>
+                        </div>
                     </div>
                 </div>
             </div>
@@ -273,7 +338,37 @@
         </div>
     </footer>
 
-    <script src="../js/languages.js?v=20250206"></script>
-    <script src="../script.js?v=20250206"></script>
+    <script src="../js/languages.js?v=20250207"></script>
+    <script src="../script.js?v=20250207"></script>
+    <script>
+        document.addEventListener('mousemove', function(e) {
+            var pageHeader = document.querySelector('.page-header');
+            if (pageHeader) {
+                pageHeader.style.setProperty('--mouse-x', e.clientX + 'px');
+                pageHeader.style.setProperty('--mouse-y', e.clientY + 'px');
+            }
+        });
+        function handleScrollAnimation() {
+            var elements = document.querySelectorAll('.scroll-animate');
+            elements.forEach(function(el) {
+                if (el.getBoundingClientRect().top < window.innerHeight - 150) {
+                    el.classList.add('visible');
+                }
+            });
+        }
+        window.addEventListener('scroll', handleScrollAnimation);
+        window.addEventListener('load', handleScrollAnimation);
+        var featureCards = document.querySelectorAll('.feature-card');
+        featureCards.forEach(function(card) {
+            card.addEventListener('mouseenter', function() {
+                this.style.transform = 'translateY(-8px) scale(1.01)';
+                this.style.boxShadow = '0 15px 30px rgba(0, 212, 255, 0.3)';
+            });
+            card.addEventListener('mouseleave', function() {
+                this.style.transform = 'translateY(0) scale(1)';
+                this.style.boxShadow = '0 10px 30px rgba(0, 212, 255, 0.2)';
+            });
+        });
+    </script>
 </body>
 </html>
