0206修改第一屏动画图和深色模式浅色模式

--- a/pages/about.html
+++ b/pages/about.html
@@ -4,7 +4,8 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title data-i18n="nav.about">关于我们 - PowerVerse Chain</title>
-    <link rel="stylesheet" href="../styles.css?v=20250207">
+    <link rel="stylesheet" href="../styles.css?v=20250210">
+    <script>(function(){var t=localStorage.getItem('theme');document.documentElement.setAttribute('data-theme',t==='light'?t:'dark');})();</script>
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Inter:wght@300;400;500;600;700&display=swap" rel="stylesheet">
@@ -182,6 +183,7 @@
                     <li><a href="about.html" data-i18n="nav.about">关于我们</a></li>
                 </ul>
                 <div class="nav-actions">
+                    <button type="button" class="theme-toggle" id="themeToggle" aria-label="深色/浅色模式切换" title="深色/浅色模式"><span class="theme-icon theme-icon-light">☀️</span><span class="theme-icon theme-icon-dark">🌙</span></button>
                     <button class="lang-switch">English</button>
                     <button class="menu-toggle" id="menuToggle">
                         <span></span>
@@ -227,19 +229,19 @@
                 <p data-i18n="about.team.intro">创始团队成员拥有多次成功创业经验，曾打造过行业领先的服务器集群，具有多项国家专利技术。由多名拥有公司上市经验成员加入初始团队。其他员工中有许多博士及教授，在web3领域具有丰富经验，参与多个大型项目。</p>
                 <div class="team-grid">
                     <div class="team-member">
-                        <div class="team-avatar"><img src="../images/teams/Harvey.png?v=20250207" alt="Harvey"></div>
+                        <div class="team-avatar"><img src="../images/teams/Harvey.png?v=20250210" alt="Harvey"></div>
                         <h4 data-i18n="about.team.members.member1.name">Harvey</h4>
                         <div class="team-role" data-i18n="about.team.members.member1.role">创始人 & CEO</div>
                         <div class="team-bio" data-i18n="about.team.members.member1.bio">毕业于英国伯明翰大学，区块链技术专家，深耕加密货币领域多年</div>
                     </div>
                     <div class="team-member">
-                        <div class="team-avatar"><img src="../images/teams/Solomon.png?v=20250207" alt="Solomon"></div>
+                        <div class="team-avatar"><img src="../images/teams/Solomon.png?v=20250210" alt="Solomon"></div>
                         <h4 data-i18n="about.team.members.member2.name">Solomon</h4>
                         <div class="team-role" data-i18n="about.team.members.member2.role">联合创始人 & CTO</div>
                         <div class="team-bio" data-i18n="about.team.members.member2.bio">毕业于英国曼彻斯特大学，分布式系统专家，区块链技术顾问</div>
                     </div>
                     <div class="team-member">
-                        <div class="team-avatar"><img src="../images/teams/Jane.png?v=20250207" alt="Jane"></div>
+                        <div class="team-avatar"><img src="../images/teams/Jane.png?v=20250210" alt="Jane"></div>
                         <h4 data-i18n="about.team.members.member3.name">Jane</h4>
                         <div class="team-role" data-i18n="about.team.members.member3.role">联合创始人 & COO</div>
                         <div class="team-bio" data-i18n="about.team.members.member3.bio">毕业于加拿大维多利亚大学，生态系统建设专家，加密资产管理专家</div>
@@ -312,7 +314,7 @@
         </div>
     </footer>
 
-    <script src="../js/languages.js?v=20250207"></script>
-    <script src="../script.js?v=20250207"></script>
+    <script src="../js/languages.js?v=20250210"></script>
+    <script src="../script.js?v=20250210"></script>
 </body>
 </html>
