--- a/pages/scenarios.html
+++ b/pages/scenarios.html
@@ -6,6 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title data-i18n="nav.scenario.title">应用场景 - PowerVerse Chain</title>
     <link rel="stylesheet" href="../styles.css">
+    <script>(function(){var t=localStorage.getItem('theme');document.documentElement.setAttribute('data-theme',t==='light'?t:'dark');})();</script>
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Inter:wght@300;400;500;600;700&display=swap" rel="stylesheet">
@@ -622,6 +623,7 @@
                     <li><a href="about.html" data-i18n="nav.about">关于我们</a></li>
                 </ul>
                 <div class="nav-actions">
+                    <button type="button" class="theme-toggle" id="themeToggle" aria-label="深色/浅色模式切换" title="深色/浅色模式"><span class="theme-icon theme-icon-light">☀️</span><span class="theme-icon theme-icon-dark">🌙</span></button>
                     <button class="lang-switch">English</button>
                     <button class="menu-toggle" id="menuToggle">
                         <span></span>
@@ -1357,8 +1359,8 @@
         </div>
     </footer>
 
-    <script src="../js/languages.js?v=20250207"></script>
-    <script src="../script.js?v=20250207"></script>
+    <script src="../js/languages.js?v=20250210"></script>
+    <script src="../script.js?v=20250210"></script>
 </body>
 
 </html>
