--- a/run_ralph_test.html
+++ b/run_ralph_test.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Ralph Loop 全量测试</title>
-    <link rel="stylesheet" href="styles.css">
+    <link rel="stylesheet" href="styles.css?v=20250210">
     <style>
         .test-panel {
             position: fixed;
@@ -114,9 +114,10 @@
     </div>
     
     <!-- 加载语言管理器和测试脚本 -->
-    <script src="js/languages.js"></script>
-    <script src="ralph_loop_test.js"></script>
-    <script src="script.js"></script>
+    <script src="js/cache-version.js"></script>
+    <script src="js/languages.js?v=20250210"></script>
+    <script src="ralph_loop_test.js?v=20250210"></script>
+    <script src="script.js?v=20250210"></script>
     
     <script>
         let testLog = [];
